third_party/move/move-compiler-v2/tests/more-v1/parser/phantom_param_missing_type_var.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/phantom_param_missing_type_var.move:2:25
  │
2 │     struct S<T1, phantom> {
  │                         ^
  │                         │
  │                         Unexpected '>'
  │                         Expected an identifier
